# AI-Anime-Recommender

./: .gitignore  Dockerfile  build_pipeline.py  llmops-k8s.yaml  pyproject.toml
notebook/: experiment.ipynb
src/: data_loader.py  recommender.py  vector_store.py
utils/: custom_exception.py
